--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,11 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:cardview-v7:26.0.+'
+    compile 'com.firebase:firebase-client-android:2.4.0'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.loopj.android:android-async-http:1.4.9'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
