added progress bar to various pages, fixed chat detail page action bar issue, fixed action bar problem with session activity and more...

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
         </service>
 
         <activity android:name=".activities.ChatActivity" />
-        <activity android:name=".activities.SessionActivity" />
+        <activity android:name=".activities.SessionActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".activities.MyContactsActivity" />
         <activity
             android:name=".activities.ProfileActivity"
