--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".activities.ChatActivity" />
+        <activity android:name=".activities.ChatActivity"
+            android:launchMode="singleTop"/>
         <activity android:name=".activities.SessionActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".activities.MyContactsActivity" />
