--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <receiver
-        android:name="NetworkChangeReceiver"
-        android:label="NetworkChangeReceiver" >
+        android:name=".NetworkChangeReceiver"
+        android:label="NetworkChangeReceiver">
         <intent-filter>
             <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
@@ -18,11 +18,11 @@
 
     <application
         android:allowBackup="true"
+        android:configChanges="orientation|screenSize"
         android:icon="@drawable/ic_launcher_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:configChanges="orientation|screenSize">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".activities.MainActivity"
             android:theme="@style/AppTheme.Launcher">
@@ -49,10 +49,12 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".activities.ChatActivity"
-            android:launchMode="singleTop"/>
-        <activity android:name=".activities.SessionActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".activities.ChatActivity"
+            android:launchMode="singleTop" />
+        <activity
+            android:name=".activities.SessionActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activities.MyContactsActivity" />
         <activity
             android:name=".activities.ProfileActivity"
@@ -60,16 +62,20 @@
         <activity
             android:name=".activities.ChatDetailActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.LoginActivity"/>
+        <activity android:name=".activities.LoginActivity" />
         <!-- Set custom default icon. This is used when no icon is set for incoming notification messages. -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@mipmap/ic_launcher_round" />
-        <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
-             notification message. -->
+        <!--
+             Set color used with incoming notification messages. This is used when no color is set for the incoming
+             notification message.
+        -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorPrimaryDark" />
+
+        <activity android:name=".activities.GroupCreatorActivity"/>
     </application>
 
 </manifest>
