Adding notification try handler class for new method of chat invitation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,7 +76,8 @@
             android:resource="@color/colorPrimaryDark" />
 
         <activity android:name=".activities.GroupCreatorActivity" />
-        <activity android:name=".activities.GroupChatActivity"></activity>
+        <activity android:name=".activities.GroupChatActivity" />
+        <activity android:name=".activities.NotificationTryActivity"></activity>
     </application>
 
 </manifest>
