Fixed how notification created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,7 +77,7 @@
 
         <activity android:name=".activities.GroupCreatorActivity" />
         <activity android:name=".activities.GroupChatActivity" />
-        <activity android:name=".activities.NotificationActivity"></activity>
+        <activity android:name=".activities.NotificationActivity"/>
     </application>
 
 </manifest>
