Updated app theme and added become admin feature

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,8 +54,10 @@
             android:launchMode="singleTop" />
         <activity
             android:name=".activities.SessionActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.MyContactsActivity" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:label="@string/title_all_chats"/>
+        <activity android:name=".activities.MyContactsActivity"
+            android:label="@string/title_contacts"/>
         <activity
             android:name=".activities.ProfileActivity"
             android:theme="@style/AppTheme.Transparent" />
@@ -63,7 +65,9 @@
             android:name=".activities.ChatDetailActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activities.LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden"
+            android:label="@string/title_login"/>
         <!-- Set custom default icon. This is used when no icon is set for incoming notification messages. -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
@@ -76,9 +80,11 @@
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorPrimaryDark" />
 
-        <activity android:name=".activities.GroupCreatorActivity" />
+        <activity android:name=".activities.GroupCreatorActivity"
+            android:label="@string/title_create_group"/>
         <activity android:name=".activities.GroupChatActivity" />
-        <activity android:name=".activities.NotificationActivity" />
+        <activity android:name=".activities.NotificationActivity"
+            android:label="@string/title_notifications"/>
         <activity android:name=".activities.GroupDetailActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
     </application>
