Updated layouts of pages and fixed minor errors

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
         <activity
             android:name=".activities.SessionActivity"
             android:label="@string/title_all_chats"
+            android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.MyContactsActivity"
@@ -84,7 +85,8 @@
 
         <activity
             android:name=".activities.GroupCreatorActivity"
-            android:label="@string/title_create_group" />
+            android:theme="@style/AppTheme.Transparent"
+            />
         <activity android:name=".activities.GroupChatActivity" />
         <activity
             android:name=".activities.NotificationActivity"
@@ -92,7 +94,12 @@
         <activity
             android:name=".activities.GroupDetailActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.SettingsActivity"></activity>
+        <activity android:name=".activities.SettingsActivity"
+            android:parentActivityName=".activities.SessionActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.naziur.androidchat.activities.SessionActivity" />
+        </activity>
     </application>
 
 </manifest>
