Finished App Info and reporting issue aspect of settings page and fixed minor error with GroupSessionFragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,7 +103,8 @@
         <activity
             android:name=".activities.MemberSelectorActivity"
             android:label="@string/title_select_member" />
-        <activity android:name=".activities.AboutActivity"></activity>
+        <activity android:name=".activities.AboutActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
