--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,11 @@ android {
     }
 }
 
+repositories
+        {
+            maven{url "http://dl.bintray.com/hani-momanii/maven"}
+        }
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -42,6 +47,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:4.0.0'
     compile 'com.github.manuelpeinado.fadingactionbar:fadingactionbar:3.1.2'
     compile 'com.github.manuelpeinado.fadingactionbar:fadingactionbar-abc:3.1.2'
+    compile 'hani.momanii.supernova_emoji_library:supernova-emoji-library:0.0.2'
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:cardview-v7:26.0.+'
