--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:icon="@drawable/ic_launcher_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:windowSoftInputMode="stateHidden">
         <activity
             android:name=".activities.MainActivity"
             android:theme="@style/AppTheme.Launcher">
@@ -59,8 +60,7 @@
             android:label="@string/title_contacts" />
         <activity
             android:name=".activities.ProfileActivity"
-            android:theme="@style/AppTheme.Transparent"
-            android:windowSoftInputMode="stateHidden"/>
+            android:theme="@style/AppTheme.Transparent" />
         <activity
             android:name=".activities.ChatDetailActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -68,7 +68,7 @@
             android:name=".activities.LoginActivity"
             android:label="@string/title_login"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden" />
+            />
         <!-- Set custom default icon. This is used when no icon is set for incoming notification messages. -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
@@ -108,7 +108,7 @@
         <activity
             android:name=".activities.RegisterActivity"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden"/>
+           />
     </application>
 
 </manifest>
