--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,10 @@
 
     <application
         android:allowBackup="true"
-        android:configChanges="orientation|screenSize"
         android:icon="@drawable/ic_launcher_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:windowSoftInputMode="stateHidden">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".activities.MainActivity"
             android:theme="@style/AppTheme.Launcher">
@@ -49,7 +47,8 @@
 
         <activity
             android:name=".activities.ChatActivity"
-            android:launchMode="singleTop" />
+            android:launchMode="singleTop"
+            android:configChanges="orientation|screenSize"/>
         <activity
             android:name=".activities.SessionActivity"
             android:label="@string/title_all_chats"
@@ -60,7 +59,8 @@
             android:label="@string/title_contacts" />
         <activity
             android:name=".activities.ProfileActivity"
-            android:theme="@style/AppTheme.Transparent" />
+            android:theme="@style/AppTheme.Transparent"
+            android:windowSoftInputMode="stateHidden"/>
         <activity
             android:name=".activities.ChatDetailActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -68,6 +68,7 @@
             android:name=".activities.LoginActivity"
             android:label="@string/title_login"
             android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden"
             />
         <!-- Set custom default icon. This is used when no icon is set for incoming notification messages. -->
         <meta-data
@@ -83,18 +84,22 @@
 
         <activity
             android:name=".activities.GroupCreatorActivity"
-            android:theme="@style/AppTheme.Transparent" />
-        <activity android:name=".activities.GroupChatActivity" />
+            android:theme="@style/AppTheme.Transparent"
+            android:windowSoftInputMode="stateHidden"/>
+        <activity android:name=".activities.GroupChatActivity"
+            android:configChanges="orientation|screenSize"/>
         <activity
             android:name=".activities.NotificationActivity"
             android:label="@string/title_notifications" />
         <activity
             android:name=".activities.GroupDetailActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden"/>
         <activity
             android:name=".activities.SettingsActivity"
             android:label="@string/title_settings"
-            android:parentActivityName=".activities.SessionActivity">
+            android:parentActivityName=".activities.SessionActivity"
+            android:windowSoftInputMode="stateHidden">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.naziur.androidchat.activities.SessionActivity" />
@@ -108,6 +113,7 @@
         <activity
             android:name=".activities.RegisterActivity"
             android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden"
            />
     </application>
 
