Added animation to above classes transitions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
         <activity
             android:name=".activities.ChatActivity"
             android:launchMode="singleTop"
+            android:theme="@style/AppTheme.Main"
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateHidden"/>
         <activity
@@ -57,6 +58,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.MyContactsActivity"
+            android:theme="@style/AppTheme.Contacts"
             android:label="@string/title_contacts" />
         <activity
             android:name=".activities.ProfileActivity"
@@ -64,7 +66,7 @@
             android:windowSoftInputMode="stateHidden"/>
         <activity
             android:name=".activities.ChatDetailActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.Detail" />
         <activity
             android:name=".activities.LoginActivity"
             android:label="@string/title_login"
@@ -89,13 +91,14 @@
             android:windowSoftInputMode="stateHidden"/>
         <activity android:name=".activities.GroupChatActivity"
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden"
+            android:theme="@style/AppTheme.Main"/>
         <activity
             android:name=".activities.NotificationActivity"
             android:label="@string/title_notifications" />
         <activity
             android:name=".activities.GroupDetailActivity"
-            android:theme="@style/AppTheme.NoActionBar"
+            android:theme="@style/AppTheme.Detail"
             android:windowSoftInputMode="stateHidden"/>
         <activity
             android:name=".activities.SettingsActivity"
