--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,29 +38,29 @@ repositories
         }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation ('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.github.jkwiecien:EasyImage:2.0.2'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    compile 'com.github.bumptech.glide:glide:4.0.0'
-    compile 'com.github.manuelpeinado.fadingactionbar:fadingactionbar:3.1.2'
-    compile 'com.github.manuelpeinado.fadingactionbar:fadingactionbar-abc:3.1.2'
-    compile 'hani.momanii.supernova_emoji_library:supernova-emoji-library:0.0.2'
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:cardview-v7:26.0.+'
-    compile 'com.firebase:firebase-client-android:2.4.0'
-    compile 'com.google.firebase:firebase-messaging:10.2.1'
-    compile 'com.google.firebase:firebase-database:10.2.1'
-    compile 'com.google.firebase:firebase-storage:10.2.1'
-    compile 'com.google.firebase:firebase-auth:10.2.1'
-    compile 'com.loopj.android:android-async-http:1.4.9'
-    compile 'com.android.support:design:26.+'
-    compile 'com.android.support:support-v4:26.+'
-    compile 'com.android.support:support-vector-drawable:26.+'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.github.bumptech.glide:glide:4.0.0'
+    implementation 'com.github.manuelpeinado.fadingactionbar:fadingactionbar:3.1.2'
+    implementation 'com.github.manuelpeinado.fadingactionbar:fadingactionbar-abc:3.1.2'
+    implementation 'hani.momanii.supernova_emoji_library:supernova-emoji-library:0.0.2'
+    implementation 'com.android.support:appcompat-v7:26.+'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:cardview-v7:26.0.+'
+    implementation 'com.firebase:firebase-client-android:2.4.0'
+    implementation 'com.google.firebase:firebase-messaging:10.2.1'
+    implementation 'com.google.firebase:firebase-database:10.2.1'
+    implementation 'com.google.firebase:firebase-storage:10.2.1'
+    implementation 'com.google.firebase:firebase-auth:10.2.1'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.android.support:design:26.+'
+    implementation 'com.android.support:support-v4:26.+'
+    implementation 'com.android.support:support-vector-drawable:26.+'
+    androidTestImplementation 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
 
