--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.naziur.androidchat">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -12,7 +13,8 @@
         android:icon="@drawable/ic_launcher_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".activities.MainActivity"
             android:theme="@style/AppTheme.Launcher">
@@ -49,11 +51,12 @@
             android:name=".activities.ChatActivity"
             android:launchMode="singleTop"
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateUnchanged|adjustResize"/>
         <activity
             android:name=".activities.SessionActivity"
             android:label="@string/title_all_chats"
             android:launchMode="singleTop"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.MyContactsActivity"
@@ -114,6 +117,7 @@
             android:theme="@style/AppTheme.Transparent" />
         <activity
             android:name=".activities.RegisterActivity"
+            android:label="@string/title_register"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden"
            />
